Laatste update voor peer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     
-    <h1>Scrummasters</h1>
+    <h1>DailyScrum</h1>
 
     <% if current_user %>
       <nav class="navigation-background">
