--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Daily Stand-up</title>
+    <title>Daily Scrum</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
 
